fix merge all features
